--- a/assets/css/divider.css
+++ b/assets/css/divider.css
@@ -1,5 +1,5 @@
 .divider {
-    margin-top: 5px;
+    width: 100%;
     height: 5px;
     background: linear-gradient(to right, var(--red-color), var(--purple-color), var(--blue-color));
 }
