--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: center;  
     height: 100px;
-    border: 1px solid red;
 
-    & img {
+    img {
         filter: drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.4));
     }
 }
