feat: create toggle theme script

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,9 +10,9 @@
 }
 
 :root {
-    --red-color: #EB4C52;
-    --purple-color: #5C348B;
-    --blue-color: #0E88C8;
+    --red-color: #f55a5f;
+    --purple-color: #ac69fa;
+    --blue-color: #1e9fe4;
     --white-color: #E9E9E9;
     --dark-color: #29292E;
 }
