--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -41,6 +41,7 @@ body::before{
 .container-background {
     height: 100%;
     padding: 10px;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
 }
 
 .flex{
